# YtrewqOS

./: .clang-format  .gitignore  CMakeLists.txt  COPYING.txt  Makefile  README.md  compile_commands.json  notes.md  submake.mk
Documentation/: notes.md  sources.bib
Documentation/dissertation/dissertation/: AArch64-RaspberryPI-OS-14325283.tex  interim-gantt.tex  interim-report.tex  original-gantt.tex  os-block-diagram.tex  refs.bib
Documentation/dissertation/interim-report/: acronyms.tex  interim-report.tex  latexmkrc  refs.bib
Documentation/dissertation/interrim-report/: acronyms.tex  gantt.tex  interrim-report.tex  latexmkrc  refs.bib
Documentation/evidence/fs/exfat/: dumpexfat-superblock.txt  foo.ppm
Documentation/reports/dissertation/: AArch64-RaspberryPI-OS-14325283.tex  acronyms.tex  finished-block-diagram.tex  gantt.tex  interim-gantt.tex  latexmkrc  nextstep-block-diagram.tex  original-gantt.tex  os-block-diagram.tex  refs.bib
Documentation/reports/proposal/: latexmkrc
dissertation/: AArch64-RaspberryPI-OS-14325283.tex  acronyms.tex  gantt.tex
include/: config.def.h  errno.h  error_types.h  framebuf.h  gpio.h  mbox.h  mem.h  mmio.h  printf.h  ptrace.h  string.h  strings.h  syscall.h  uart.h  unistd.h
include/asm/: errno.h  syscalls.h  sysregs.h
include/cpu/: sysregs.h
include/drivers/graphics/: console.h  fb_pixels.h
include/drivers/hw/: eMMC.h  mbox.h  mmio.h  power.h  uart.h
include/fonts/: bizcat_font.h
include/fs/: block.h  dirent.h  fat.h  file.h  fs.h  util.h  vfs.h
include/graphics/: console.h  console_font.h  fb_pixels.h
include/hw/: eMMC.h  gpio.h
include/io/: printf.h
include/kernel/: shell.h  test.h  timer.h  util.h
include/process/: env.h
interim-report/: gantt.tex  latexmkrc
progress/: gantt.tex  latexmkrc
proposal/: gantt.tex  notes.md  proposal.tex
src/: boot.s  hello.S  kernel.c
src/boot/: Makefile  boot.S  boot.s  boot32.S  boot32.s
src/calls/: calls.S  calls.c  exceptions.S
src/debug/: bochsrc  remote-debug.gdb
src/drivers/: Makefile  mbox.c  mmio.c
src/drivers/GPIO/: miniUART.c  uart_PL011.c
src/drivers/SD/: emmc.c
src/drivers/graphics/: console.c  fb_pixels.c
src/drivers/power/: power.c
src/fonts/: Makefile  bizcat.bdf  bizcat_font.c
src/fs/: Makefile  fat.c  util.c
src/kernel/: Makefile  framebuf.c  heap.c  kernel.c  main.c  mbox.c  printf.c  shell.c  sys.c  timer.c
src/kernel/calls/: calls.S  calls.c  exceptions.S
src/kernel/test/: main.c  tests_emmc.c  tests_examples.c
src/lib/: Makefile  framebuf.c  mbox.c  strings.c  uart.c
src/lib/graphics/: console.c  fb_pixels.c
src/lib/io/: printf.c
src/lib/peripherals/GPIO/: miniUART.c  uart_PL011.c
src/libc/: Makefile  stdlib.c  string.c
src/link/: linker.ld
src/mm/: malloc.c
src/test/: main.c  tests_emmc.c  tests_malloc.c
src/tools/: commands.gdb  createimg.sh  gdb-debug.sh  link.sh  linker.ld  toolchain.cmake
tools/: linker.ld
tools/fat/: setup-fs.sh
tools/fat/skel/first/second/third/: hello.txt
